RESOLVED FIXED193578
Regression(PSON) Scroll position is not always restored properly when navigating back
https://bugs.webkit.org/show_bug.cgi?id=193578
Summary Regression(PSON) Scroll position is not always restored properly when navigat...
Chris Dumez
Reported 2019-01-18 09:15:17 PST
Scroll position is not always restored properly when navigating back, when PSON is enabled.
Attachments
Patch (13.99 KB, patch)
2019-01-18 09:40 PST, Chris Dumez
thorton: review+
Radar WebKit Bug Importer
Comment 1 2019-01-18 09:15:44 PST
Chris Dumez
Comment 2 2019-01-18 09:40:54 PST
EWS Watchlist
Comment 3 2019-01-18 09:44:07 PST
Attachment 359499 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:3849: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:3853: Missing spaces around = [whitespace/operators] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:3866: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 3 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4 2019-01-18 11:24:44 PST
Comment on attachment 359499 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=359499&action=review > Source/WebKit/ChangeLog:42 > + not cause a flash in most cases. Howerver, with PSON enabled and the layer tree freezing we Howerver
Chris Dumez
Comment 5 2019-01-18 11:47:38 PST
Note You need to log in before you can comment on or make changes to this bug.